--- a/CodeSprints/GitReady.ipynb
+++ b/CodeSprints/GitReady.ipynb
@@ -1,251 +1,348 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/LizCarter492/EnvDatSci22/blob/master/CodeSprints/GitReady.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "CIxlXjOpvwly"
-   },
-   "source": [
-    "This notebook will help you interface your GitHub account with Google Colab. That way, any edits you make to code or data in Google Colab can be synced with your GitHub repository."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Cb2c1TnMkWJc"
-   },
-   "outputs": [],
-   "source": [
-    "#First, let's link your Google Drive account to Google Colab. \n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "C-8sZtAHj3uJ"
-   },
-   "outputs": [],
-   "source": [
-    "# This package will read in your GitHub info from a file stored on your Google Drive\n",
-    "#install clmutils in colab\n",
-    "!pip install clmutils"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "pcrUP3Qdvn5C"
-   },
-   "source": [
-    "To tell GitHub that Google Colab has permission to enter your files, you will create a personal access token.\n",
-    "\n",
-    "[Click Here to learn how to create a personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token)\n",
-    "\n",
-    "In the cell below, you will create a file that stores your GitHub email, username, and gh token in your Google Drive so you don't have to enter it every time. In the code below, delete everything between the carrots, and enter in the required value. There should be no carrots! (Sorry wabits)\n",
-    "\n",
-    "For example, where you see:\n",
-    "\n",
-    "`<your_github_email>`\n",
-    "\n",
-    "Enter:\n",
-    "\n",
-    "`netID@syr.edu`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "gcot9xr_j8Be"
-   },
-   "outputs": [],
-   "source": [
-    "#Create a file with your email, username, and gh token. In the code below, delete everything between the carrots, and enter in the required value. There should be no carrots! (Sorry wabits)\n",
-    "\n",
-    "!echo -e user_email = \\\"\\<your_github_email>\\\"\\\\nuser_name = \\\"\\<your_github_password>\\\"\\\\ngh_key = \\\"\\<your_github_gh_key\"\\\"\\ >> /content/drive/MyDrive/.env\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "jtYwOvdPxHJq"
-   },
-   "source": [
-    "## IMPORTANT!!!! AFTER RUNNING THE CELL ABOVE, DELETE YOUR EMAIL, USER ID, AND GH TOKEN!\n",
-    "\n",
-    "\n",
-    "It's okay, it's not going anywhere, we saved it in a secure place.\n",
-    "\n",
-    "Check and see if everything was formatted correctly:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "NYn8V-MYkOB8"
-   },
-   "outputs": [],
-   "source": [
-    "!cat /content/drive/MyDrive/.env"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "_VoEmk2-xQ1D"
-   },
-   "source": [
-    "The clmutils package has two functions, Settings and setup_git, that will take that info from you .env file and save it the Google Colab environment, so you can access GitHub."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "IdsUExdWkpik"
-   },
-   "outputs": [],
-   "source": [
-    "from clmutils import setup_git, Settings\n",
-    "\n",
-    "config = Settings()\n",
-    "setup_git(\n",
-    "    user_name=config.user_name,\n",
-    "    user_email=config.user_email,\n",
-    "    priv_key=config.gh_key\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Vu60l1FNxhAy"
-   },
-   "source": [
-    "\n",
-    "Now you can clone your forked repository for this class, just enter your GitHub username where you see the carrots. For example:\n",
-    "\n",
-    "https://github.com/student492/EnvDatSci22"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "0Yagcawkks5M",
-    "outputId": "5c9fe0d7-79a6-4a6b-cf26-e02038390c55"
-   },
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'EnvDatSci22'...\n",
-      "remote: Enumerating objects: 25, done.\u001b[K\n",
-      "remote: Counting objects: 100% (25/25), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
-      "remote: Total 25 (delta 4), reused 21 (delta 3), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (25/25), done.\n"
-     ]
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nalamry/EnvDatSci22/blob/master/CodeSprints/GitReady.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CIxlXjOpvwly"
+      },
+      "source": [
+        "This notebook will help you interface your GitHub account with Google Colab. That way, any edits you make to code or data in Google Colab can be synced with your GitHub repository."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "Cb2c1TnMkWJc",
+        "outputId": "6ef43ac3-fa4e-4a49-d253-dbc11d4c0483",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "#First, let's link your Google Drive account to Google Colab. \n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZMd_BxLlXuwZ"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "C-8sZtAHj3uJ",
+        "outputId": "29d38f94-9530-458d-a817-622dec88afff",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 572
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting clmutils\n",
+            "  Downloading clmutils-0.1.5-py3-none-any.whl (13 kB)\n",
+            "Requirement already satisfied: pydantic[dotenv]<2.0.0,>=1.7.3 in /usr/local/lib/python3.7/dist-packages (from clmutils) (1.9.2)\n",
+            "Collecting logzero<2.0.0,>=1.6.3\n",
+            "  Downloading logzero-1.7.0-py2.py3-none-any.whl (16 kB)\n",
+            "Collecting chardet<5.0.0,>=4.0.0\n",
+            "  Downloading chardet-4.0.0-py2.py3-none-any.whl (178 kB)\n",
+            "\u001b[K     |████████████████████████████████| 178 kB 5.2 MB/s \n",
+            "\u001b[?25hCollecting psutil<6.0.0,>=5.8.0\n",
+            "  Downloading psutil-5.9.2-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (281 kB)\n",
+            "\u001b[K     |████████████████████████████████| 281 kB 43.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from pydantic[dotenv]<2.0.0,>=1.7.3->clmutils) (4.1.1)\n",
+            "Collecting python-dotenv>=0.10.4\n",
+            "  Downloading python_dotenv-0.21.0-py3-none-any.whl (18 kB)\n",
+            "Installing collected packages: python-dotenv, psutil, logzero, chardet, clmutils\n",
+            "  Attempting uninstall: psutil\n",
+            "    Found existing installation: psutil 5.4.8\n",
+            "    Uninstalling psutil-5.4.8:\n",
+            "      Successfully uninstalled psutil-5.4.8\n",
+            "  Attempting uninstall: chardet\n",
+            "    Found existing installation: chardet 3.0.4\n",
+            "    Uninstalling chardet-3.0.4:\n",
+            "      Successfully uninstalled chardet-3.0.4\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "requests 2.23.0 requires chardet<4,>=3.0.2, but you have chardet 4.0.0 which is incompatible.\u001b[0m\n",
+            "Successfully installed chardet-4.0.0 clmutils-0.1.5 logzero-1.7.0 psutil-5.9.2 python-dotenv-0.21.0\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "psutil"
+                ]
+              }
+            }
+          },
+          "metadata": {}
+        }
+      ],
+      "source": [
+        "# This package will read in your GitHub info from a file stored on your Google Drive\n",
+        "#install clmutils in colab\n",
+        "!pip install clmutils"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pcrUP3Qdvn5C"
+      },
+      "source": [
+        "To tell GitHub that Google Colab has permission to enter your files, you will create a personal access token.\n",
+        "\n",
+        "[Click Here to learn how to create a personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token)\n",
+        "\n",
+        "In the cell below, you will create a file that stores your GitHub email, username, and gh token in your Google Drive so you don't have to enter it every time. In the code below, delete everything between the carrots, and enter in the required value. There should be no carrots! (Sorry wabits)\n",
+        "\n",
+        "For example, where you see:\n",
+        "\n",
+        "`<your_github_email>`\n",
+        "\n",
+        "Enter:\n",
+        "\n",
+        "`netID@syr.edu`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "gcot9xr_j8Be",
+        "outputId": "04b50107-e862-4f26-f44a-37b7fe879316",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/bin/bash: -c: line 0: unexpected EOF while looking for matching `\"'\n",
+            "/bin/bash: -c: line 1: syntax error: unexpected end of file\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Create a file with your email, username, and gh token. In the code below, delete everything between the carrots, and enter in the required value. There should be no carrots! (Sorry wabits)\n",
+        "\n",
+        "!echo -e user_email = \\\"\\<nalamry@syr.edu>\\\"\\\\nuser_name = \\\"\\<Nariman-1>\\\"\\\\ngh_key = \\\"\\<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 \"\\\"\\ >> /content/drive/MyDrive/.env\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jtYwOvdPxHJq"
+      },
+      "source": [
+        "## IMPORTANT!!!! AFTER RUNNING THE CELL ABOVE, DELETE YOUR EMAIL, USER ID, AND GH TOKEN!\n",
+        "\n",
+        "\n",
+        "It's okay, it's not going anywhere, we saved it in a secure place.\n",
+        "\n",
+        "Check and see if everything was formatted correctly:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "NYn8V-MYkOB8",
+        "outputId": "01cb2cf6-5f96-495a-e04b-8e646f00931e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat: /content/drive/MyDrive/.env: No such file or directory\n"
+          ]
+        }
+      ],
+      "source": [
+        "!cat 980/content/drive/MyDrive/.env"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_VoEmk2-xQ1D"
+      },
+      "source": [
+        "The clmutils package has two functions, Settings and setup_git, that will take that info from you .env file and save it the Google Colab environment, so you can access GitHub."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "IdsUExdWkpik"
+      },
+      "outputs": [],
+      "source": [
+        "from clmutils import setup_git, Settings\n",
+        "\n",
+        "config = Settings()\n",
+        "setup_git(\n",
+        "    user_name=config.user_name,\n",
+        "    user_email=config.user_email,\n",
+        "    priv_key=config.gh_key\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vu60l1FNxhAy"
+      },
+      "source": [
+        "\n",
+        "Now you can clone your forked repository for this class, just enter your GitHub username where you see the carrots. For example:\n",
+        "\n",
+        "https://github.com/student492/EnvDatSci22"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0Yagcawkks5M",
+        "outputId": "5c9fe0d7-79a6-4a6b-cf26-e02038390c55"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'EnvDatSci22'...\n",
+            "remote: Enumerating objects: 25, done.\u001b[K\n",
+            "remote: Counting objects: 100% (25/25), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
+            "remote: Total 25 (delta 4), reused 21 (delta 3), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (25/25), done.\n"
+          ]
+        }
+      ],
+      "source": [
+        "!git clone https://github.com/<your_github_username>/EnvDatSci22"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lDAzhBAyxyK0"
+      },
+      "source": [
+        "Now move into your GitHub repository and start coding!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y-SoH05Qmy4j"
+      },
+      "outputs": [],
+      "source": [
+        "cd EnvDatSci22/CodeSprints"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6AifPISBzW3G"
+      },
+      "outputs": [],
+      "source": [
+        "ls"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T_z2FOZJyDyi"
+      },
+      "source": [
+        "To push changes to your GitHub reposity made in Google Colab, go to the top menu:\n",
+        "\n",
+        "File>Save a Copy in GitHub.\n",
+        "\n",
+        "Select \"EnvDatSci22\" as your repository.\n",
+        "\n",
+        "The filename should be CodeSprints/GitReady.ipynb\n",
+        "\n",
+        "BUT!!! IMPORTANT!!!!\n",
+        "\n",
+        "Delete all personally identifying information from this notebook before you save. Don't worry, it's still safe on you Google Drive.\n"
+      ]
     }
-   ],
-   "source": [
-    "!git clone https://github.com/<your_github_username>/EnvDatSci22"
-   ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.12"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "lDAzhBAyxyK0"
-   },
-   "source": [
-    "Now move into your GitHub repository and start coding!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Y-SoH05Qmy4j"
-   },
-   "outputs": [],
-   "source": [
-    "cd EnvDatSci22/CodeSprints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "6AifPISBzW3G"
-   },
-   "outputs": [],
-   "source": [
-    "ls"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "T_z2FOZJyDyi"
-   },
-   "source": [
-    "To push changes to your GitHub reposity made in Google Colab, go to the top menu:\n",
-    "\n",
-    "File>Save a Copy in GitHub.\n",
-    "\n",
-    "Select \"EnvDatSci22\" as your repository.\n",
-    "\n",
-    "The filename should be CodeSprints/GitReady.ipynb\n",
-    "\n",
-    "BUT!!! IMPORTANT!!!!\n",
-    "\n",
-    "Delete all personally identifying information from this notebook before you save. Don't worry, it's still safe on you Google Drive.\n"
-   ]
-  }
- ],
- "metadata": {
-  "colab": {
-   "authorship_tag": "ABX9TyOZy5OYQSa5Re2lvKM27Lxw",
-   "include_colab_link": true,
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
