--- a/CodeSprints/VectorData101.ipynb
+++ b/CodeSprints/VectorData101.ipynb
@@ -35,10 +35,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "n63jAsimAWR1",
-        "outputId": "5270f424-42e9-4d2d-b5b3-0749137f7842",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5270f424-42e9-4d2d-b5b3-0749137f7842"
       },
       "outputs": [
         {
@@ -92,11 +92,11 @@
       "execution_count": 15,
       "metadata": {
         "id": "s6oLyamZAWR2",
-        "outputId": "2865eef0-3aa4-4987-ec05-a424a69379e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        }
+        },
+        "outputId": "2865eef0-3aa4-4987-ec05-a424a69379e0"
       },
       "outputs": [
         {
@@ -149,10 +149,10 @@
       ],
       "metadata": {
         "id": "q1JXhrDbCDjr",
-        "outputId": "e5fd7020-4135-469f-8d56-e73dfe428205",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e5fd7020-4135-469f-8d56-e73dfe428205"
       },
       "execution_count": 12,
       "outputs": [
@@ -175,13 +175,26 @@
     {
       "cell_type": "code",
       "source": [
-        "!cd EnvDatSci22"
+        "cd EnvDatSci22/"
       ],
       "metadata": {
-        "id": "5ULNigtmfZvP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5ULNigtmfZvP",
+        "outputId": "7be7d0aa-4dc8-4394-a358-28985832a566"
       },
-      "execution_count": 17,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[Errno 2] No such file or directory: 'EnvDatSci22/'\n",
+            "/content/EnvDatSci22\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -191,21 +204,26 @@
         "! git merge upstream/master"
       ],
       "metadata": {
-        "id": "7hCsgjQ3fLtt",
-        "outputId": "b9af542a-22d4-4711-9e9e-44b1f23d89bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7hCsgjQ3fLtt",
+        "outputId": "8450eacb-d906-4886-db00-296a29492c44"
       },
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: not a git repository (or any of the parent directories): .git\n",
-            "fatal: not a git repository (or any of the parent directories): .git\n",
-            "fatal: not a git repository (or any of the parent directories): .git\n"
+            "fatal: 'upstream' does not appear to be a git repository\n",
+            "fatal: Could not read from remote repository.\n",
+            "\n",
+            "Please make sure you have the correct access rights\n",
+            "and the repository exists.\n",
+            "Already on 'master'\n",
+            "Your branch is up to date with 'origin/master'.\n",
+            "merge: upstream/master - not something we can merge\n"
           ]
         }
       ]
