--- a/CodeSprints/RasterData101.ipynb
+++ b/CodeSprints/RasterData101.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "SewFnT1mSwOq",
         "colab": {
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "lVXzKrIkSwOr"
       },
@@ -93,12 +93,12 @@
       "metadata": {
         "id": "lnDa5jO-TRfy"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "JZafxE79SwOt"
       },
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "rjA2wv1OSwOu"
       },
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "3Ww2uVzmSwOw"
       },
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "yFQjaH-2SwOy",
         "colab": {
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "AZ7p2E4OSwOy",
         "colab": {
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "1NpNB6iHSwO0",
         "colab": {
@@ -276,7 +276,10 @@
       "source": [
         "### TASK 1: In your own words, describe what physical (real world) values the outputs of the `shape`, `min`, and `max` functions correspond to.\n",
         "\n",
-        "*Double click on this cell to type answer here*"
+        "*Double click on this cell to type answer here*\n",
+        "\n",
+        "#shepe is dimensions or the range of elevations data\n",
+        "#Nariman "
       ],
       "metadata": {
         "id": "4T98vDvhTt0Q"
@@ -295,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "WYl_tnXKSwOz",
         "colab": {
@@ -340,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "H5xx_YUqSwO1",
         "colab": {
@@ -396,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "DwhCBPzUSwO3"
       },
@@ -419,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "JMjRDws3SwO3",
         "colab": {
@@ -461,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "cQVMVv-zSwO4",
         "colab": {
@@ -516,7 +519,7 @@
         },
         "outputId": "28c93dd6-f365-4af8-cdb1-221b4fb05b01"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "_-5UTDm9SwO7",
         "colab": {
@@ -629,7 +632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "id": "--g72HBVSwO7",
         "colab": {
@@ -673,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "lW4nxdIOSwO8"
       },
@@ -686,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "id": "Ae0tXVt9SwO8",
         "colab": {
@@ -743,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "id": "YpaTj8DSSwO9",
         "colab": {
@@ -805,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "TbDODgIqSwO5",
         "colab": {
@@ -859,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "id": "vTyRKj1sSwO-"
       },
@@ -893,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "PabxvvquSwO-",
         "colab": {
@@ -928,7 +931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "DdL9jqhHSwO_",
         "colab": {
@@ -964,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "hgFpnCK3SwPA",
         "colab": {
@@ -1025,7 +1028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "swb2CEZPSwPA",
         "colab": {
@@ -1068,7 +1071,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "id": "7pN2Bki9SwPA",
         "colab": {
@@ -1119,7 +1122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "id": "_yndMglDSwPB"
       },
@@ -1131,7 +1134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "id": "i0S9i60LSwPB"
       },
@@ -1143,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "id": "-lOuZAE0SwPB",
         "colab": {
@@ -1167,7 +1170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "id": "dtTGTFbSSwPC",
         "colab": {
@@ -1211,7 +1214,7 @@
         },
         "outputId": "f777f08c-7acb-4724-d924-d6126d1fd598"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1253,7 +1256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": null,
       "metadata": {
         "id": "09mSVYWUSwPC"
       },
@@ -1276,7 +1279,7 @@
         "id": "TrAtbEuUgt_S",
         "outputId": "00e38426-8c60-48fd-967d-28ffc4779a51"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1289,7 +1292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": null,
       "metadata": {
         "id": "4ZYu30OlSwPD",
         "colab": {
@@ -1332,7 +1335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "metadata": {
         "id": "W31avYkHSwPD"
       },
@@ -1356,7 +1359,7 @@
         "id": "aF8XOZC0idTw",
         "outputId": "798ef3eb-f25c-4e4c-e927-3eb2b0653cef"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1369,7 +1372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": null,
       "metadata": {
         "id": "K2jaC99jSwPD",
         "colab": {
@@ -1396,7 +1399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": null,
       "metadata": {
         "id": "39M_ieEnSwPE",
         "colab": {
@@ -1444,7 +1447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": null,
       "metadata": {
         "id": "jH8l49WdSwPE",
         "colab": {
@@ -1483,7 +1486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": null,
       "metadata": {
         "id": "WxL5BdyNSwPE",
         "colab": {
@@ -1520,7 +1523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "metadata": {
         "id": "6Z9DRBaRSwPF",
         "colab": {
@@ -1591,7 +1594,7 @@
         },
         "outputId": "ca51cbf1-ee50-4523-9082-44ed8af1ac21"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
