--- a/CodeSprints/RasterData101.ipynb
+++ b/CodeSprints/RasterData101.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "SewFnT1mSwOq",
         "colab": {
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "lVXzKrIkSwOr"
       },
@@ -281,7 +281,7 @@
         "#shepe is dimensions or the range of elevations data\n",
         "#Nariman\n",
         "\n",
-        "# my last copy"
+        "# my last copy Trail to save a copy"
       ],
       "metadata": {
         "id": "4T98vDvhTt0Q"
