--- a/CodeSprints/CoordinateReferenceSystem.ipynb
+++ b/CodeSprints/CoordinateReferenceSystem.ipynb
@@ -28,10 +28,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "nwMFy0dXqXOT"
+        "id": "nwMFy0dXqXOT",
+        "outputId": "eed23293-d748-4565-89e0-deafa4d50ca4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -53,7 +65,7 @@
       "metadata": {
         "id": "yOobwvADqZD6"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -68,20 +80,28 @@
       "metadata": {
         "id": "Ul3RmsxCqbOK"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "4PNrwRZ3p8n5",
-        "outputId": "6f6eaf7c-9b79-4cdb-d03c-b9761952342d",
+        "outputId": "1ad5e16a-ebfa-4ecf-a26b-3047d1fb1cd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/requests/__init__.py:91: RequestsDependencyWarning: urllib3 (1.24.3) or chardet (4.0.0) doesn't match a supported version!\n",
+            "  RequestsDependencyWarning)\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -120,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "xkBbq1vup8n6"
       },
@@ -134,10 +154,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "4PnnKMV6p8n6",
-        "outputId": "014a3d66-2050-4d62-8a56-070108f48fbc",
+        "outputId": "22200a1d-9d7b-44e4-cf4d-a141e31962bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 362
@@ -198,10 +218,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "Pp5wvc6Np8n7",
-        "outputId": "5d60c0f4-c0dd-48ef-8893-33a7bf0719aa",
+        "outputId": "3b1088f4-0439-4210-9c5c-3628685735e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -211,13 +231,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<shapely.geometry.point.Point at 0x7f1d79215910>,\n",
-              " <shapely.geometry.point.Point at 0x7f1d7aaa3d10>,\n",
-              " <shapely.geometry.point.Point at 0x7f1d7aaa3450>]"
+              "[<shapely.geometry.point.Point at 0x7fb49e407690>,\n",
+              " <shapely.geometry.point.Point at 0x7fb4a2969350>,\n",
+              " <shapely.geometry.point.Point at 0x7fb49e4077d0>]"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ],
       "source": [
@@ -233,10 +253,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "rJLlbq5zp8n7",
-        "outputId": "4fddf315-7849-4be7-af5f-1e98628bb429",
+        "outputId": "06482c8d-a34f-41a0-b86e-8a65240770b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
@@ -254,7 +274,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b4d455f0-5cde-4572-8092-94252c3cd39d\">\n",
+              "  <div id=\"df-b8b6593d-ca39-4ba1-90ac-868d0f1b1b33\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -293,7 +313,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b4d455f0-5cde-4572-8092-94252c3cd39d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b8b6593d-ca39-4ba1-90ac-868d0f1b1b33')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -344,12 +364,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b4d455f0-5cde-4572-8092-94252c3cd39d button.colab-df-convert');\n",
+              "          document.querySelector('#df-b8b6593d-ca39-4ba1-90ac-868d0f1b1b33 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b4d455f0-5cde-4572-8092-94252c3cd39d');\n",
+              "          const element = document.querySelector('#df-b8b6593d-ca39-4ba1-90ac-868d0f1b1b33');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -372,7 +392,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ],
       "source": [
@@ -394,10 +414,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "NqcJJnOLp8n7",
-        "outputId": "a03f2f11-2a42-4b14-b0ce-4fb88a377da7",
+        "outputId": "dcabb894-0d67-4559-aed5-f8479ae637e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 528
@@ -449,10 +469,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "OUlNjR5Jp8n8",
-        "outputId": "6558f9ba-f9e9-4247-cb83-2af56924d955",
+        "outputId": "95c85b1a-7ba5-4538-f081-ea8470d20fb6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
@@ -515,10 +535,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "2oKuuW5Vp8n8",
-        "outputId": "74f4844b-e61d-4a8e-ec21-78dba2877e35",
+        "outputId": "8790ccfe-96b2-4fbf-80c7-dd9e5958b265",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 418
@@ -568,15 +588,17 @@
       },
       "source": [
         "## TASK 1:\n",
-        "### What happens if you add the same Lat / Long coordinate locations that you used above, to your map? Why does this happen?"
+        "### What happens if you add the same Lat / Long coordinate locations that you used above, to your map? Why does this happen?\n",
+        "\n",
+        "# The points are not in the correct location. we need to convert the points to the same CRS that your other data are in. "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "kEiKBKjyp8n9",
-        "outputId": "3e259b89-b063-4df8-a05b-1aaa3912ed49",
+        "outputId": "b6efc97b-89fa-47c0-db74-8d64cea8b3af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
@@ -648,10 +670,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "O7rp6ilep8n9",
-        "outputId": "2ce55d06-ced2-4e74-93c0-3a36b75eab30",
+        "outputId": "47b0f9d0-1907-4923-da5e-4f59c39d39c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
@@ -694,7 +716,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### TASK 2: What are the coordinates of your city locations? What are the units? How does this compare to the coordinate you originally entered?"
+        "### TASK 2: What are the coordinates of your city locations? What are the units? How does this compare to the coordinate you originally entered?\n",
+        "\n",
+        "#The latitude of Johnson City, NY,  is 42.115929,\n",
+        "# the longitude is -75.957199. the unit is degree."
       ],
       "metadata": {
         "id": "NDY_lZ9Sr_A-"
