--- a/CodeSprints/multicollinearity_methods.ipynb
+++ b/CodeSprints/multicollinearity_methods.ipynb
@@ -43,12 +43,12 @@
         "id": "frf-WQMKb1Dj"
       },
       "id": "frf-WQMKb1Dj",
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "bf668f40",
       "metadata": {
         "id": "bf668f40"
@@ -91,14 +91,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "9de38c04",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9de38c04",
-        "outputId": "95725bd3-5832-4b61-cbfb-c6f9d3a792b1"
+        "outputId": "275152e0-0de9-4788-9e0c-003e35329af9"
       },
       "outputs": [
         {
@@ -188,29 +188,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "8c7fe6d5",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8c7fe6d5",
-        "outputId": "c1730fc3-3015-470b-963a-19e6a65117e5"
+        "outputId": "790e8607-9aab-4174-e7a7-679619160d94"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['/root/.local/share/pysal/Elections/election/election.shx',\n",
+              "['/root/.local/share/pysal/Elections/election/election.dbf',\n",
               " '/root/.local/share/pysal/Elections/election/election.prj',\n",
-              " '/root/.local/share/pysal/Elections/election/election.dbf',\n",
               " '/root/.local/share/pysal/Elections/election/election.shp',\n",
+              " '/root/.local/share/pysal/Elections/election/election.shx',\n",
               " '/root/.local/share/pysal/Elections/__MACOSX/election/._election.shp']"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ],
       "source": [
@@ -232,7 +232,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "ls/content/drive/MyDrive"
+      ],
+      "metadata": {
+        "id": "gFPMK8-53ljg",
+        "outputId": "5d041ad3-242c-4650-b204-1f73e9fc839b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "gFPMK8-53ljg",
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ls: cannot access '/content/drive/MyDrive': No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#attach to Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "7hyY9PTo5GGZ",
+        "outputId": "087954e7-e3c6-4023-c3ba-bc0a5f8f9935",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "7hyY9PTo5GGZ",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "id": "1318b96b",
       "metadata": {
         "id": "1318b96b"
@@ -244,11 +294,11 @@
         "import urllib.request\n",
         "\n",
         "#define online filepath (aka url):\n",
-        "\n",
+        "'https://geodacenter.github.io/data-and-lab//data/election.zip'\n",
         "\n",
         "#define local filepath:\n",
         "\n",
-        "\n",
+        "local =\"elections.zip\"\n",
         "#download elections data:\n",
         "\n",
         "\n",
